# WinDevDiary

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WinDevDiary.sln
WinDevDiary/: WinDevDiary.vcxproj  WinDevDiary.vcxproj.filters  copydlls.bat  imgui.ini  main.json
WinDevDiary/include/: Interface.h
WinDevDiary/src/: Interface.cpp  diaryIO.cpp  diaryIO.hpp  main.cpp  ui.cpp  ui.hpp
src/: CMakeLists.txt  diaryIO.cpp  diaryIOOLD.cppTEMP  diaryIOOLD.hppTEMP  ui.cpp
